[core-service] feat: Добавил ручку для обновления токена
